# ctm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
res/conf/: ctm.ini
src/: main.cpp
src/channel/: command_event.cpp  command_event.h  event.hpp  event_channel.hpp  subscriber.hpp
src/channel/event/: bridge_event.hpp  client_event.hpp  command_event.cpp  command_event.h  cti_error_event.hpp  cti_event.hpp  error_event.hpp  event.hpp
src/cisco/common/: agent_state_value.hpp  failure_indication.hpp  floating_data.cpp  floating_data.h  floating_data.hpp  message_type.hpp  mhdr.cpp  mhdr.h  mhdr.hpp  serializable.hpp  tag_value.hpp  time.hpp
src/cisco/control/: query_agent_state_conf.hpp  query_agent_state_req.hpp
src/cisco/message/: agent_state_event.hpp
src/cisco/miscellaneous/: system_event.hpp
src/cisco/session/: heartbeat_conf.hpp  heartbeat_req.h  heartbeat_req.hpp  open_conf.hpp  open_req.h  open_req.hpp
src/cisco/supervisor/: agent_team_config_event.hpp
src/ctm/: acceptor.hpp  agent_info.hpp  agent_info_map.hpp  client_state.hpp  cti_client.cpp  cti_client.h  ctm.cpp  ctm.h  handler.hpp  tcp_acceptor.cpp  tcp_acceptor.h  tcp_handler.cpp  tcp_handler.h
src/ctm/acceptor/: acceptor.hpp  tcp_acceptor.cpp  tcp_acceptor.h  tcp_acceptor.hpp  websocket_acceptor.cpp  websocket_acceptor.h  websocket_acceptor.hpp
src/ctm/bridge/: message_bridge.hpp
src/ctm/handler/: handler.hpp  tcp_handler.cpp  tcp_handler.h  tcp_handler.hpp  websocket_handler.cpp  websocket_handler.h  websocket_handler.hpp  websocket_handler_factory.hpp
src/ctm/message/: agent_message.hpp  client_message.hpp  message.hpp  state_request_message.hpp
src/template/: singleton.hpp
src/util/: base64.hpp  ini_loader.cpp  ini_loader.h
